# cpp_logger

./: .gitignore  CMakeLists.txt  LICENSE.txt  test.cpp
include/: log_format.h  log_fromat.h  log_output.h  log_output_console.h  log_output_file.h  logger.h  x_log_format.h
src/: log_output_console.cpp  log_output_file.cpp  logger.cpp  x_log_format.cpp
